--- a/index.html
+++ b/index.html
@@ -5,14 +5,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spotify Clone</title>
-    <!-- don't forget to link your styles -->
+     <link rel="stylesheet" href="styles/style.css">
   </head>
+
   <body>
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-    right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
+    <header>
+      <div class="menu">
+        <img id="spotify" src="images/spotify-logo.png" alt="Spotify Logo">
+        <nav class="navigationbar">
+          <ul>
+            <li><a href="#">Premium</a></li>
+            <li><a href="#">Discover</a></li>
+            <li><a href="#">Help</a></li>
+            <li><a href="#">Download</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    
+    <div class="content">
+      <h1>Music for everyone.</h1>
+      <p>
+        Spotify is now free on mobile, tablet and computer.<br>
+        Listen to the right music, wherever you are.
+      </p>
+    </div>
+
+    <div class="background-image"></div>
+
+    <section class="secondbox">
+      <h2>What’s on Spotify?</h2>
+      <hr class="hrgreen">
+      <div class="containers">
+        <div class="first">
+          <img id="first" src="images/music-icon.png" alt="music">
+          <h3>Millions of Songs</h3> 
+          <h4>There are millions of <br> songs on Spotify</h4>
+        </div>
+        <div class="second">
+          <img id="second" src="images/high-quality-icon.png" alt="high-quality-icon">
+          <h3>HD Music</h3>
+          <h4>Listen to music as if you <br> were listening live</h4>
+        </div>
+        <div class="third">
+          <img id="third" src="images/devices-icon.png" alt="devices-icon">
+          <h3>Stream Everywhere</h3>
+          <h4>Stream music on your <br>smartphone, tablet or <br> computer</h4>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="greentext">
+        <h5>It's as yeezy as Kanye West.</h5>
+        <hr class="hrwhite">
+        <h6>Search</h6>
+        <p>Know what you want to listen to? <br> Just search and hit play.</p>
+        <h6>Browse</h6>
+        <p>Check out the latest charts, <br> brand new releases and great <br> playlists for right now.</p>
+        <h6>Discover</h6>
+        <p>Enjoy new music every Monday <br> with your own personal playlist. <br> Or sit back and enjoy Radio.</p>
+      </div>
+      <div class="images">
+        <img class="spotify-icon" src="images/spotify-icon-white.png" alt="Spotify Icon White" >
+        <img class="app" src="images/spotify-app.jpg" alt="Kanye West">
+      </div>
+    </section>
   </body>
 </html>
